<resources>

    <!-- Oredr-->
    <string name="app_name">AntiVirus</string>
    <string name="title">ORDER/SERVICES</string>
    <string name="laptop">Laptop</string>
    <string name="days">15 Days Extra</string>
    <string name="pc">Desktop</string>
    <string name="spinner">Antivirus Type :</string>
    <string-array name="names">
        <item>SELECT</item>
        <item>QUICK HEAL</item>
        <item>NP</item>
    </string-array>


    <!--Navbar-->
    <string name="nav_open">Open Navi</string>
    <string name="nav_close">close Navi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_navigation">MainNavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_add_new">Add New</string>
    <string name="menu_purchase">Purchase</string>
    <string name="menu_view_orders">View Orders</string>


</resources>