<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


<!--    <com.google.android.material.appbar.AppBarLayout-->
<!--        android:id="@+id/appbar"-->
<!--        android:layout_width="match_parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        >-->

<!--        <RelativeLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->

<!--            <RelativeLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content">-->

<!--                <ImageButton-->
<!--                    android:id="@+id/backbutton"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_centerVertical="true"-->
<!--                    android:background="?attr/selectableItemBackgroundBorderless"-->
<!--                    android:padding="10sp"-->
<!--                    app:srcCompat="@drawable/back_white_24" />-->

<!--                <TextView-->
<!--                    style="@style/navBarTextStyle"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_centerVertical="true"-->
<!--                    android:layout_marginStart="0sp"-->
<!--                    android:textAllCaps="true"-->
<!--                    android:textColor="@android:color/white"-->
<!--                    android:layout_toEndOf="@+id/backbutton"-->
<!--                    android:text="New Entry"-->
<!--                    android:textSize="20dp" />-->

<!--            </RelativeLayout>-->

<!--        </RelativeLayout>-->

<!--    </com.google.android.material.appbar.AppBarLayout>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"


        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/spinner"
                    android:layout_weight="1"
                    android:textSize="25sp"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    />
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spin"
                    android:layout_weight="1"
                    android:layout_marginTop="30dp"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/laptop"
                    android:id="@+id/chk1"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:drawableLeft="@drawable/ic_baseline_laptop_24"
                    />


                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pc"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:drawableLeft="@drawable/ic_baseline_desktop_windows_24"
                    />
            </LinearLayout>

            <!--      ithun apla start      -->






            <!--            end-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/active_date"
                android:hint="Select Activation Date"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
                />

            <CheckBox
                android:id="@+id/extraCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/days"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/expiry_date"
                android:hint="Enter Expiry Date DD/MM/YY"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
                android:layout_gravity="center"

                />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/EtName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                app:boxStrokeColor="@android:color/black"
                android:hint="Name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="text"

                    android:textStyle="normal"
                    android:paddingTop="7sp"
                    android:paddingEnd="7sp"
                    android:paddingStart="7sp"
                    android:paddingBottom="7sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="11sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/EtPhone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                app:boxStrokeColor="@android:color/black"
                android:hint="Phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="text"

                    android:textStyle="normal"
                    android:paddingTop="7sp"
                    android:paddingEnd="7sp"
                    android:paddingStart="7sp"
                    android:paddingBottom="7sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="11sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/EtAddress"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                app:boxStrokeColor="@android:color/black"
                android:hint="Address">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="text"
                    android:textStyle="normal"
                    android:paddingTop="7sp"
                    android:paddingEnd="7sp"
                    android:paddingStart="7sp"
                    android:paddingBottom="7sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="11sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--            <EditText-->
            <!--                android:layout_width="330dp"-->
            <!--                android:layout_height="50dp"-->
            <!--                android:hint="  Enter Name"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:drawableLeft="@drawable/ic_baseline_person_24"-->
            <!--                android:layout_marginTop="10dp"-->
            <!--                />-->
            <!--            <EditText-->
            <!--                android:layout_width="330dp"-->
            <!--                android:layout_height="50dp"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:drawableLeft="@drawable/ic_baseline_phone_24"-->
            <!--                android:hint="  Enter Contact No"-->
            <!--                android:layout_marginTop="10dp"-->
            <!--                />-->

            <!--            <EditText-->
            <!--                android:layout_width="330dp"-->
            <!--                android:layout_height="80dp"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:hint="  Enter Address"-->
            <!--                android:drawableLeft="@drawable/ic_baseline_location_city_24"-->
            <!--                android:layout_marginTop="10dp"-->
            <!--                />-->


            <Button
                android:id="@+id/BtSubmit"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="Submit"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>
            <!--            <TextView-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="result"-->
            <!--                android:id="@+id/txt1"-->
            <!--                />-->
            <!--            <TextView-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="result"-->
            <!--                android:id="@+id/txt2"-->
            <!--                />-->


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>